--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body{
     font-size: 25px;
 }
 .item{
+    position: relative;
     padding: 10px;
     height: 200px;
     display: flex;
     align-items: center;
     gap: 30px;
     margin-bottom: 50px;
-    box-shadow: 0px 0px 9px 5px #252523;
-    
+    background-color: #000;
 }
 
 .item_img{
